--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/tillhub/tillhub-sdk-node.git"
+    "url": "https://github.com/tillhub/schemas.git"
   },
   "keywords": [
     "tillhub",
@@ -30,7 +30,7 @@
   "author": "Robert Jefe Lindstaedt <robert.lindstaedt@gmail.com>",
   "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/tillhub/tillhub-sdk-node/issues"
+    "url": "https://github.com/tillhub/schemas/issues"
   },
   "engines": {
     "node": ">=8.6.0"
@@ -42,7 +42,7 @@
     "LICENSE",
     "README.md"
   ],
-  "homepage": "https://github.com/tillhub/tillhub-sdk-node#readme",
+  "homepage": "https://github.com/tillhub/schemas#readme",
   "devDependencies": {
     "@semantic-release/changelog": "^2.1.1",
     "@semantic-release/git": "^6.0.1",
