--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,9 @@ jobs:
       - run:
           name: lint
           command: npm run lint
+      - run:
+          name: compile
+          command: node compile.js && npm run deploy:static -- --token "$FIREBASE_TOKEN"
       # - run:
       #     name: test
       #     command: npm test
