--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "commit": "npm run precommit && git-cz",
     "preversion": "npm run lint && npm test && npm run docs:md && git add -A .",
     "postversion": "TAG=$(echo $(git describe --tags $(git rev-list --tags --max-count=1))) && git tag -a $TAG $TAG -f -m \"$(git log `git describe --tags --abbrev=0 HEAD^`..HEAD --oneline)\" && git push && git push --tags && npm run clean",
-    "clean": "rm -rf coverage coverage.lcov .nyc_output"
+    "clean": "rm -rf coverage coverage.lcov .nyc_output",
+    "deploy:static": "firebase deploy --only=hosting"
   },
   "repository": {
     "type": "git",
@@ -60,6 +61,7 @@
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.7.0",
     "eslint-plugin-standard": "^3.1.0",
+    "firebase-tools": "^4.0.0",
     "gh-pages": "^1.1.0",
     "glob": "^7.1.2",
     "jsdoc": "^3.5.5",
@@ -125,6 +127,7 @@
           "package-lock.json",
           "lib/**/*.{js}",
           "docs",
+          "dist",
           "CHANGELOG.md"
         ],
         "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
