--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
           command: npm run lint
       - run:
           name: compile
-          command: node compile.js && npm run deploy:static -- --token "$FIREBASE_TOKEN"
+          command: node compile.js
       # - run:
       #     name: test
       #     command: npm test
