--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "homepage": "https://github.com/tillhub/schemas#readme",
   "devDependencies": {
     "@semantic-release/changelog": "^2.1.1",
+    "@semantic-release/exec": "^2.3.0",
     "@semantic-release/git": "^6.0.1",
     "@semantic-release/github": "^4.4.0",
     "@semantic-release/npm": "^3.4.0",
@@ -134,6 +135,10 @@
       }
     ],
     "publish": [
+      {
+        "path": "@semantic-release/exec",
+        "cmd": "npm run deploy:static -- --token \"$FIREBASE_TOKEN\""
+      },
       "@semantic-release/npm",
       "@semantic-release/github"
     ]
