fix(hosting): fixes redirect to actually show content

--- a/firebase.json
+++ b/firebase.json
@@ -6,5 +6,12 @@
       "**/.*",
       "**/node_modules/**"
     ]
-  }
+  },
+  "redirects": [
+    {
+      "source": "/",
+      "destination": "/index.json",
+      "type": 301
+    }
+  ]
 }
