--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,9 @@ jobs:
           name: lint
           command: npm run lint
       - run:
+          name: test
+          command: npm run test
+      - run:
           name: compile
           command: node compile.js
       # - run:
