--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "glob": "^7.1.2",
     "jsdoc": "^3.5.5",
     "jsdoc-to-markdown": "^4.0.1",
+    "node": "^10.12.0",
     "nodemon": "^1.18.3",
     "nyc": "^12.0.2",
     "proxyquire": "^2.1.0",
