feat: adds cors headers to json

--- a/firebase.json
+++ b/firebase.json
@@ -12,6 +12,17 @@
         "destination": "/index.json",
         "type": 301
       }
+    ],
+    "headers": [
+      {
+        "source": "**/*.@(json)",
+        "headers": [
+          {
+            "key": "Access-Control-Allow-Origin",
+            "value": "*"
+          }
+        ]
+      }
     ]
   }
 }
