--- a/firebase.json
+++ b/firebase.json
@@ -20,6 +20,10 @@
           {
             "key": "Access-Control-Allow-Origin",
             "value": "*"
+          },
+          {
+            "key": "Cache-Control",
+            "value": "max-age=3600"
           }
         ]
       }
