build: add `compile` run script

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "preversion": "npm run lint && npm test && npm run docs:md && git add -A .",
     "postversion": "TAG=$(echo $(git describe --tags $(git rev-list --tags --max-count=1))) && git tag -a $TAG $TAG -f -m \"$(git log `git describe --tags --abbrev=0 HEAD^`..HEAD --oneline)\" && git push && git push --tags && npm run clean",
     "clean": "rm -rf coverage coverage.lcov .nyc_output",
-    "deploy:static": "firebase deploy --only=hosting"
+    "deploy:static": "firebase deploy --only=hosting",
+    "compile": "node compile"
   },
   "repository": {
     "type": "git",
