--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
   },
   "dependencies": {
     "ajv": "^6.5.3",
+    "common-tags": "^1.8.0",
     "hygen": "^4.0.9",
     "just-pick": "^2.1.0"
   },
