--- a/package.json
+++ b/package.json
@@ -65,11 +65,12 @@
     "cz-conventional-changelog": "^2.1.0",
     "dotenv": "^6.0.0",
     "eslint": "^5.4.0",
-    "eslint-config-standard": "^11.0.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-node": "^7.0.1",
-    "eslint-plugin-promise": "^4.0.0",
-    "eslint-plugin-standard": "^3.1.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "eslint-plugin-react": "^7.12.4",
     "firebase-tools": "^7.11.0",
     "gh-pages": "^1.2.0",
     "glob": "^7.1.2",
