chore(readme): updating the realse flow on readme

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "semantic-release": "semantic-release",
     "precommit": "npm run lint && git add -A",
     "commit": "npm run precommit && git-cz",
-    "preversion": "npm run lint && npm test && npm run docs:md && git add -A .",
+    "preversion": "npm run lint && npm test && git add -A .",
     "postversion": "TAG=$(echo $(git describe --tags $(git rev-list --tags --max-count=1))) && git tag -a $TAG $TAG -f -m \"$(git log `git describe --tags --abbrev=0 HEAD^`..HEAD --oneline)\" && git push && git push --tags && npm run clean",
     "clean": "rm -rf coverage coverage.lcov .nyc_output",
     "deploy:static": "firebase deploy --only=hosting",
