create a temporary version

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,7 @@ jobs:
     branches:
       only:
         - master
+        - detached
     docker:
       - image: 'circleci/node:latest'
     steps:
